// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render basic radio button 1`] = `
<FormField
  alignEnd={false}
>
  <div
    className="mdc-radio"
  >
    <input
      checked={false}
      className="mdc-radio__native-control"
      disabled={false}
      id="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
      onChange={[Function]}
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
    id="mdc-radio-label--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    Radio 1
  </label>
</FormField>
`;

exports[`<Radio /> should render disabled radio button 1`] = `
<Radio
  alignEnd={false}
  checked={false}
  disabled={true}
  label="Radio 1"
>
  <FormField
    alignEnd={false}
  >
    <div
      className="mdc-form-field"
    >
      <div
        className="mdc-radio mdc-radio--disabled"
      >
        <input
          checked={false}
          className="mdc-radio__native-control"
          disabled={true}
          id="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
          onChange={[Function]}
          type="radio"
        />
        <div
          className="mdc-radio__background"
        >
          <div
            className="mdc-radio__outer-circle"
          />
          <div
            className="mdc-radio__inner-circle"
          />
        </div>
      </div>
      <label
        htmlFor="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
        id="mdc-radio-label--2e732f05-f466-4fba-acb5-2f3be58daf75"
      >
        Radio 1
      </label>
    </div>
  </FormField>
</Radio>
`;
